Added better F3 Animation and better Chat Animations with parallel downloads for better performance.  - You can press ^ for the fast GUI or RShift for the normal GUI